# agentz

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  KEYBINDINGS.md  README.md  REMOTE.md  TODO.md  biome.json  package.json  tsconfig.base.json  vitest.config.ts
.docs/: architecture.md  codex-prerequisites.md  provider-architecture.md  runtime-modes.md  scripts.md  workspace-layout.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  empty.ts  package.json  tsconfig.json
apps/desktop/qt6/: package.json
apps/desktop/scripts/: smoke-test.mjs  wait-then-tauri-dev.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  menu.rs
apps/desktop/tauri/: package.json  tsconfig.json
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/integration/: OrchestrationEngineHarness.integration.ts  TestProviderAdapter.integration.ts  orchestrationEngine.integration.test.ts  providerService.integration.test.ts
apps/server/scripts/: cli.ts
apps/server/src/: attachmentPaths.ts  attachmentStore.test.ts  attachmentStore.ts  bun.d.ts  claudeCodeAppServerHelpers.test.ts  claudeCodeAppServerHelpers.ts  claudeCodeAppServerManager.test.ts  (+43 more)
apps/web/: components.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.browser.config.ts
docs/: FINDINGS-REPO-CLEANUP.md  release.md
scripts/: build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  package.json  sync-vscode-icons.mjs  tsconfig.json
scripts/lib/: brand-assets.ts  resolve-catalog.ts
(+342 files in other folders)
