[package]
name = "agentz"
version = "0.0.4-alpha.1"
description = "Agentz desktop application"
authors = ["T3 Tools"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
dirs = "5"
which = "6"
rfd = "0.14"
